syntax = "proto3";

package access.service;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/v8platform/ras-grpc-gw/pkg/gen/access/service;access_service";

service TokenService {
  rpc Get(GetRequest) returns (GetTokenResponse) {};
  rpc Refresh(RefreshRequest) returns (GetTokenResponse) {};
}

message GetRequest {

  string user = 1;
  string password = 2;

}

message GetTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string access_token = 1;
  string refresh_token = 2;
}
